...
            "state": "translated",
            "value": "关闭"
          }
        }
      }
    },
    "出错了": {
      "extractionState": "manual",
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "出错了"
...
            "state": "translated",
            "value": "好"
          }
        }
      }
    },
    "好的": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "OK"
...
            "state": "translated",
            "value": "放弃编辑？"
          }
        }
      }
    },
    "新建时刻": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "New Moment"
...
            "state": "translated",
            "value": "解锁无限日记、无限照片、无限标签，随时随地记录每一个时刻"
          }
        }
      }
    },
    "设置": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Settings"
...
